--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 </path>	
 <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
 	
-<property file="${config}.properties" />
+<property file="${config}"  />
 
 <property name="build" value="${basedir}/ant" />
 <property name="build.packages.home" value="${build}/packages" />
@@ -90,19 +90,6 @@
     <ivy:retrieve  validate="false" pattern="${ivy.lib.dir}/[conf]/[type]-[module]-[artifact]-[revision].[ext]" />
 </target>
 
-<!--
-<target name="flatten-local-files"  >
-	
-	<copy todir="${lib.dir}/local-flattened/">
-        <fileset dir="${lib.dir}/local">
-            <include name="**/*.jar"/>
-            <exclude name="**/*-sources.jar" />
-        </fileset>
-        <mapper type="flatten"/>
-    </copy>
-    
-</target>
--->
 
 <target name="compile" depends="setup" >
     <javac fork="true"
@@ -144,7 +131,7 @@
 	<copy file="etc/config/crawl-${resource.type}.xml" tofile="war/WEB-INF/crawl-repository.xml" overwrite="true" />
 	
 	
-	<copy file="${config}.properties" tofile="war/WEB-INF/classes/project.properties" overwrite="true" />
+	<copy file="${config}" tofile="war/WEB-INF/classes/project.properties" overwrite="true" />
 	
 	<copy todir="war/WEB-INF/classes/sql">
         <fileset dir="sql/">
@@ -278,32 +265,5 @@
 <target name="resolve" depends="setup,resolve-compile,resolve-war,resolve-jar" />
 <target name="setup-complete" depends="resolve,package-jar" />
 
-	
-<target name="GenerateLuceneIndices" >
-	<fail message="The 'tabix' property must be set" unless="tabix"/> 
-	<echo>${tabix}</echo>
-	<fail message="The 'lucene' property must be set" unless="lucene"/> 
-	<echo>${lucene}</echo>
-	<fail message="The 'log4j.config' property must be set" unless="log4j.config"/> 
-	<echo>${log4j.config}</echo>
-	
-	<mkdir dir="${lucene}" />
-	
-    <java fork="true" maxmemory="1024m" failonerror="true" classname="org.genedb.crawl.business.GenerateLuceneIndex"  >
-        <classpath>
-            <path >
-            	<fileset dir="${build.packages.home}" >
-            		<include name="**/*.jar"/>
-            	 </fileset>
-            </path>
-        </classpath>
-
-    	<arg line="-t '${tabix}' -l '${lucene}' "/>
-        <jvmarg line="-server -Djava.awt.headless=true" />
-    	<jvmarg value="-Dlog4j.configuration=file://${log4j.config}"/>
-
-    </java>
-	
-</target>
 
 </project>
